ChangeLog for herdstat

2005-05-19 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac, lib/Makefile.am, src/Makefile.am: set LIBTOOL in
	configure.in and AC_SUBST rather than setting it in each Makefile.am.

2005-05-18 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.0 final).

2005-05-17 Aaron Walker <ka0ttic@gentoo.org>

	* src/Makefile.am, lib/Makefile.am: Use libtool --silent.
	* lib/string.hh: Added string::substr() as Glib::ustring::substr()
	returns a Glib::ustring.
	* src/formatter.cc: util::string instantiation is no longer needed
	when calling util::string::split() now that substr returns a
	util::string.
	* src/action_pkg_handler.cc, src/action_pkg_handler.hh: display()
	argument need not be non-const.

2005-05-16 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Explicitly call PKG_PROG_PKG_CONFIG.  Gentoo bug
	92788.

2005-05-15 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.0_rc6).

2005-05-14 Aaron Walker <ka0ttic@gentoo.org>

	* src/herdstat.cc, src/options.cc, doc/herdstat.1.in, bashcomp: Added
	--with-maintainer and --no-maintainer.
	* src/action_pkg_handler.cc, src/action_pkg_handler.hh: Added support
	for --with-maintainer.  Move search error messages to it's own
	function, error().  Also moved the search found determination code to
	it's own member func, is_found().

2005-05-13 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Added gcc version check and define HAVE_GCC4 if using
	gcc-4.
	* lib/util_exceptions.hh, src/exceptions.hh: Use correct form of
	va_start if HAVE_GCC4.
	* src/action_meta_handler.cc: Fixed bug that caused 'herdstat -m' with
	no non-options to break.

2005-05-12 Aaron Walker <ka0ttic@gentoo.org>

	* doc/herdstat.1.in, doc/examples.txt, doc/default.css,
	doc/Makefile.am: Moved EXAMPLES section of manual page to it's own
	file, as it was starting to get quite large.  Stole Makefile.am
	snippet and default.css from eclectic, so credit to ciaranm for those.