@@ -37,7 +37,8 @@ _herdstat() {
 	-v --verbose -q --quiet -D --debug -t --timer -o --outfile
         -F --fetch -c --count -n --nocolor --no-herd -m --metadata
         --with-herd -w --which --versions --no-overlay -r --regex
-        -E --extended -f --find --qa --with-maintainer --no-maintainer"
+        -E --extended -f --find --qa --with-maintainer --no-maintainer
+        -a --away"
 
     if [[ ${cur} == -* ]] ; then
         COMPREPLY=( $(compgen -W "${opts}" -- ${cur}) )
@@ -51,7 +52,7 @@ _herdstat() {
 	-H|--herdsxml|-o|--outfile)
 	    COMPREPLY=( $(compgen -f -- ${cur}) )
 	    ;;
-	-d|--dev)
+	-a|--all|-d|--dev)
 	    COMPREPLY=( $(compgen -W "$(_complete_dev) ${opts} all" -- ${cur}) )
 	    ;;
         --with-herd)
